--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "restaurant",
+  "name": "todo",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --config webpack.dev.js",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Neil-Tr/restaurant.git"
+    "url": "git+https://github.com/Neil-Tr/todo.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Neil-Tr/restaurant/issues"
+    "url": "https://github.com/Neil-Tr/todo/issues"
   },
-  "homepage": "https://github.com/Neil-Tr/restaurant#readme",
+  "homepage": "https://github.com/Neil-Tr/todo#readme",
   "description": "",
   "devDependencies": {
     "css-loader": "^7.1.2",
